GraphicComponent.style renamed to .shape